Make the calculator work simply assuming the user types simple 2 operands operations

--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,8 @@ div {
 
 #keyboard {
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: auto auto auto auto auto;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 20% 20% 20% 20% 20%;
 }
 
 #zero {
